fix icons not showing up in IE

--- a/app/assets/stylesheets/_airflow.scss
+++ b/app/assets/stylesheets/_airflow.scss
@@ -740,7 +740,7 @@ table.roles{
 
 #resource-table tbody {
   tr:hover { background-color: #e0e0e0; }
-  tr:hover td i.fa-plus-circle { display: initial; }
+  tr:hover td i.fa-plus-circle { display: inline; }
   tr {
     cursor: pointer;
     td {
@@ -760,7 +760,7 @@ table.roles{
         display: none;
       }
       i.fa-minus-circle {
-        display: initial;
+        display: inline;
         margin-left: -25px;
         margin-right: 13px;
       }
